cabal-version: 1.12
name: named-servant-server
version: 0.0.1
maintainer: kristof@resonata.be
copyright: Kristof Bastiaensen 2020
license: BSD3
license-file: LICENSE
build-type: Simple

source-repository head
    type: git
    location: https://github.com/kuribas/named-servant-server

library
   Ghc-options: -Wall
   exposed-modules:
        Servant.Named.Server
   hs-source-dirs:
        src
   build-depends:
        base,
        servant,
        servant-server,
        named-servant,
        named
